--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react-dom": "^18.3.1",
     "same-runtime": "^0.0.1",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "@vercel/analytics": "^1.3.1",
+    "openai": "^4.73.1",
+    "twilio": "^5.2.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
