--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "bunx tsc --noEmit && next lint",
-    "verify": "bun run lint && bun run build",
-    "format": "bunx biome format --write"
+    "verify": "NEXT_DISABLE_FONT_DOWNLOADS=1 bun run lint && NEXT_DISABLE_FONT_DOWNLOADS=1 bun run build",
+    "format": "bunx biome format --write",
+    "prisma:generate": "prisma generate",
+    "prisma:push": "prisma db push",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@radix-ui/react-scroll-area": "^1.2.10",
@@ -23,6 +26,9 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "@vercel/analytics": "^1.3.1",
+    "@upstash/redis": "^1.29.3",
+    "@prisma/client": "^5.20.0",
+    "@sentry/nextjs": "^8.19.0",
     "openai": "^4.73.1",
     "twilio": "^5.2.1"
   },
@@ -36,6 +42,7 @@
     "eslint-config-next": "15.1.7",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "prisma": "^5.20.0"
   }
 }
