chore: update README to improve setup instructions for frontend and backend, add environment variable details, and clarify usage of scripts chore: add test scripts for Exa search and voice agent call flow to enhance testing capabilities chore: remove unused utils and database-related files to clean up the codebase chore: update package.json to remove unnecessary dependencies and scripts chore: modify server and API routes to improve error handling and response consistency chore: refactor call service and store logic to streamline call handling and improve maintainability chore: adjust TypeScript configuration to exclude backend directory from compilation chore: update Nixpacks configuration to include OpenSSL for better compatibility with dependencies

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js",
+    "build": "tsc && tsc-alias",
+    "start": "bun run dist/index.js",
     "typecheck": "tsc --noEmit",
     "postinstall": "prisma generate"
   },
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/node": "^20.17.50",
     "prisma": "^5.20.0",
+    "tsc-alias": "^1.8.16",
     "tsx": "^4.19.2",
     "typescript": "^5.8.3"
   }
