--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
     "start": "next start",
     "lint": "bunx tsc --noEmit && next lint",
     "verify": "NEXT_DISABLE_FONT_DOWNLOADS=1 bun run lint && NEXT_DISABLE_FONT_DOWNLOADS=1 bun run build",
-    "format": "bunx biome format --write",
-    "prisma:generate": "prisma generate",
-    "prisma:push": "prisma db push",
-    "postinstall": "prisma generate"
+    "format": "bunx biome format --write"
   },
   "dependencies": {
     "@radix-ui/react-scroll-area": "^1.2.10",
@@ -19,7 +16,6 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
-    "metorial": "^1.0.3",
     "next": "^15.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -27,10 +23,7 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "@vercel/analytics": "^1.3.1",
-    "@prisma/client": "^5.20.0",
-    "@sentry/nextjs": "^8.19.0",
-    "openai": "^4.73.1",
-    "twilio": "^5.2.1"
+    "@sentry/nextjs": "^8.19.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
@@ -42,7 +35,6 @@
     "eslint-config-next": "15.1.7",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.8.3",
-    "prisma": "^5.20.0"
+    "typescript": "^5.8.3"
   }
 }
