chore: wire railway service to backend root

--- a/railway.toml
+++ b/railway.toml
@@ -1,13 +1,5 @@
-[build]
-builder = "nixpacks"
-watchPaths = ["backend/**", "packages/shared/**"]
-
-[deploy]
-startCommand = "cd backend && bun run start"
-restartPolicyType = "on_failure"
-restartPolicyMaxRetries = 10
-
-[healthcheck]
-path = "/health"
-timeout = 10
-interval = 30
+[service.backend]
+root = "backend"
+install = ["bun install"]
+build = ["bun run build"]
+start = ["bun run start"]
