--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "build": "bun run --cwd ../packages/shared build && tsc && tsc-alias",
     "start": "bun run dist/index.js",
     "typecheck": "tsc --noEmit",
-    "postinstall": "prisma generate"
+    "postinstall": "bun run --cwd ../packages/shared build && prisma generate"
   },
   "dependencies": {
     "@fastify/cors": "^10.0.1",
