--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "dependencies": {
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.3",
+    "@sentry/core": "^8.55.0",
+    "@sentry/nextjs": "^8.55.0",
+    "@vadr/shared": "workspace:*",
+    "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
@@ -27,9 +31,7 @@
     "same-runtime": "^0.0.1",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "@vercel/analytics": "^1.3.1",
-    "@sentry/nextjs": "^8.19.0",
-    "@vadr/shared": "workspace:*"
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
