--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -23,7 +23,8 @@
     "build": "tsc -p tsconfig.json",
     "clean": "rm -rf dist"
   },
-  "dependencies": {
-    "zod": "^3.23.8"
+  "dependencies": {},
+  "peerDependencies": {
+    "zod": "^3.23.0"
   }
 }
