--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,14 @@
   },
   "dependencies": {
     "@fastify/cors": "^10.0.1",
+    "@fastify/websocket": "^11.2.0",
     "@prisma/client": "^5.20.0",
     "@sentry/node": "^8.19.0",
     "dotenv": "^16.4.5",
     "fastify": "^5.2.0",
     "metorial": "^1.0.3",
     "openai": "^4.73.1",
+    "ws": "^8.18.0",
     "twilio": "^5.2.1",
     "@vadr/shared": "workspace:*",
     "zod": "^3.23.8"
@@ -28,6 +30,7 @@
     "prisma": "^5.20.0",
     "tsc-alias": "^1.8.16",
     "tsx": "^4.19.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "@types/ws": "^8.5.13"
   }
 }
