Remove redundant postinstall script from backend package.json
The postinstall script was running during 'bun install' before source
code was copied, causing build failures in Docker. The Dockerfile
already handles building shared package and generating Prisma client
in the correct order after copying source code.

Fixes Railway build error: 'The specified path does not exist: tsconfig.json'

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -8,8 +8,7 @@
     "dev": "tsx watch src/index.ts",
     "build": "bun run --cwd ../shared build && tsc && tsc-alias",
     "start": "bun run dist/index.js",
-    "typecheck": "tsc --noEmit",
-    "postinstall": "bun run --cwd ../shared build && prisma generate"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@fastify/cors": "^10.0.1",
