--- a/backend/package.json
+++ b/backend/package.json
@@ -27,10 +27,11 @@
   },
   "devDependencies": {
     "@types/node": "^20.17.50",
+    "@types/ws": "^8.5.13",
+    "pino-pretty": "^13.1.2",
     "prisma": "^5.20.0",
     "tsc-alias": "^1.8.16",
     "tsx": "^4.19.2",
-    "typescript": "^5.8.3",
-    "@types/ws": "^8.5.13"
+    "typescript": "^5.8.3"
   }
 }
