--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
+    "motion": "^12.23.24",
     "next": "^15.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
