--- a/backend/package.json
+++ b/backend/package.json
@@ -16,13 +16,14 @@
     "@fastify/websocket": "^11.2.0",
     "@prisma/client": "^5.20.0",
     "@sentry/node": "^8.19.0",
+    "@vadr/shared": "workspace:*",
     "dotenv": "^16.4.5",
+    "elevenlabs": "^1.59.0",
     "fastify": "^5.2.0",
     "metorial": "^1.0.3",
     "openai": "^4.73.1",
-    "ws": "^8.18.0",
     "twilio": "^5.2.1",
-    "@vadr/shared": "workspace:*",
+    "ws": "^8.18.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
