--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@fastify/cors": "^10.0.1",
+    "@fastify/formbody": "^8.0.2",
     "@fastify/websocket": "^11.2.0",
     "@prisma/client": "^5.20.0",
     "@sentry/node": "^8.19.0",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.17.50",
+    "pino-pretty": "^11.0.0",
     "prisma": "^5.20.0",
     "tsc-alias": "^1.8.16",
     "tsx": "^4.19.2",
